# mimi-mlx

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  benchmarks.md  development.md  parity.md  usage.md  weights.md
docs/audits/: 2026-05-09-mlx-rust-token-parity-audit.md  2026-05-12-repo-wide-adversarial-audit.md
docs/superpowers/plans/: 2026-05-09-stage-0-1-scaffold.md
fixtures/: README.md
fixtures/reference/: clipped_025s.recon.npy  clipped_025s.tokens.npy  impulse_center_025s.recon.npy  impulse_center_025s.tokens.npy  manifest.json  noise_low_025s.recon.npy  noise_low_025s.tokens.npy  odd_length_6017.recon.npy  odd_length_6017.tokens.npy  real_speech_librispeech_100s.recon.npy  real_speech_librispeech_100s.tokens.npy  silence_025s.recon.npy  silence_025s.tokens.npy  sine_440_025s.recon.npy  sine_440_025s.tokens.npy  sine_440_100s.recon.npy  sine_440_100s.tokens.npy  synthetic_speech_like_050s.recon.npy  synthetic_speech_like_050s.tokens.npy
scripts/: benchmark_batching.py  benchmark_decode.py  benchmark_encode.py  compare_reference.py  download_reference_assets.py  export_reference_fixtures.py  inspect_weights.py
src/mimi_mlx/: __init__.py  audio.py  cli.py  config.py  layouts.py  model.py  modules.py  parity.py  quantizer.py  tokenizer.py  weights.py
tests/: test_audio.py  test_batch_parity.py  test_cli.py  test_config.py  test_decoder_shapes.py  test_encoder_shapes.py  test_export_reference_fixtures.py  test_layouts.py  test_mlx_optimizations.py  test_quantizer.py  test_reference_parity.py  test_weights.py
